--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
-background-color: seagreen;
+background-color: rgb(18, 80, 121);
 text-align: center;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
