--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
 background-color: rgb(18, 80, 121);
 text-align: center;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
+color: seashell;
 }
 ul {
     display: table;
