--- a/style.css
+++ b/style.css
@@ -1,21 +1,34 @@
 body {
-background-color: rgb(18, 80, 121);
+background-color: black;
 text-align: center;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 color: seashell;
+font-variant: small-caps;
 }
-ul {
-    display: table;
-    list-style: none;
-    padding: 0;
-}
-
-ul li {
-    align-items: center;
-    display: inline-block;
-    padding: 5px;
-    font-variant: small-caps;
-}
-.button {
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
     float: left;
-}
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
