--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-background-color: #FCDAB7;
+background-color: rgb(75, 73, 73);
 text-align: center;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
-color: #1D2D50;
+color: white;
 font-variant: small-caps;
 }
 /* Top navigation background color */
@@ -14,7 +14,7 @@ font-variant: small-caps;
   /* Links style in navigation bar */
   .topnav a {
     float: left;
-    color: #FCDAB7;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -32,3 +32,20 @@ font-variant: small-caps;
     background-color: #1E5F74;
     color: white;
   }
+  .banner {
+    width: 100%;
+    margin 0%;
+  }
+.center {
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+  }
+  ul {
+      list-style: none;
+  }
+
+li {display: inline-block;
+    padding: 10%;
+}
